syntax = "proto3";

option csharp_namespace = "Accommodation";

package rating;

service ReservationGRPCService {
  rpc CheckIfUserCanRate (RatingData) returns (CanRate);
  rpc GuestHasActiveReservations (UserData) returns (ActiveReservation);
  rpc UpdateRequestsPostUserDeletion (UserData) returns (Updated);
  rpc HostHasActiveReservations (UserData) returns (ActiveReservation);
  rpc AccommodationHasReservation (AccId) returns (HasReservation);
}


message RatingData {
  string UserId = 1; 
  string RatedEntityId = 2;
  int32 RatedEntityType = 3;
}

message CanRate {
  bool ratingAllowed = 1;
}

message UserData {
  string id = 1; 

}

message  ActiveReservation {
  bool isReservationActive = 1;
}

message Updated {
  bool isUpdated = 1;
}

message AccId{
	string id = 1;
}

message HasReservation{
	bool reservation=1;
}